# knowledge-engine

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml  research.sh  run.sh
.claude/agents/: research-analyzer.md  research-critic.md  research-skeptic.md  research-team.md
Knowledge/: mechanism-design-in-auctions.md
agents/: knowledge-curator.md  research-skeptic.md  research-team.md  research-verifier.md
examples/basic-research/: README.md  config.yaml
examples/continuous-learning/: README.md  config.yaml  schedule.yaml
scripts/: export-bibtex.py  export-csv.py  generate-viewer.py
src/knowledge_engine/: __init__.py  cli.py
src/knowledge_engine/config/: __init__.py  settings.py
src/knowledge_engine/distill/: __init__.py  export.py  trainer.py
src/knowledge_engine/evaluation/: __init__.py  curator.py  gate.py  rubric.py  weakness.py
src/knowledge_engine/models/: __init__.py  anthropic.py  ollama.py  router.py
src/knowledge_engine/research/: __init__.py  pipeline.py  preflight.py  quality_gate.py  skeptic.py  synthesizer.py
src/knowledge_engine/scheduler/: __init__.py  budget.py  heartbeat.py  task.py
src/knowledge_engine/search/: __init__.py  hybrid.py  index.py  rerank.py
templates/: evaluation-rubric.yaml  research-report.md  zettelkasten-note.md
tests/: test_evaluation.py  test_knowledge.py  test_search.py
